--- a/src/TMLM.SalesIllustrator.Web/wwwroot/css/ff_css.css
+++ b/src/TMLM.SalesIllustrator.Web/wwwroot/css/ff_css.css
@@ -250,6 +250,8 @@ body {
     min-height: 54vh;
     padding: 1.5em;
     border-radius: 10px;
+    top:40%;
+    position: absolute;
 }
 
 .overviewcontent {
@@ -269,7 +271,7 @@ body {
     width: 90vw;
     background: #fff;
     position: absolute;
-    top: 22%;
+    top: 28%;
     transform: translateY(0px);
     flex: 1;
     display: flex;
